# Integrator

./: .gitignore  CHANGELOG.md  PIPELINE_SUMMARY.md  README.md  annotation.py  benchmark.py  debug_harmony.py  gse158055int_test.py  integration.py  main.py  preprocessing.py  pyproject.toml  requirements.txt  verify_env.py
src/data/: __init__.py  annotation.py  loader.py  preprocessing.py
src/evaluation/: evaluator.py
src/integrations/: __init__.py  base.py  harmony.py  scanorama.py  scgen.py  scvi.py
src/integratore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: env_setup.py  gpu.py
src/visualization/: plot.py
